--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -17,3 +17,14 @@
 <!-- 🐨 Append the div to the root div using `append` -->
 <!--   💰 document.getElementById('root') -->
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/API/ParentNode/append -->
+
+<body>
+    <script type='module'>
+        let rootElement = document.createElement('div')
+        rootElement.setAttribute('id', 'root')
+        document.body.append(rootElement)
+        let divElement = document.createElement('div')
+        divElement.textContent = 'Herllo World'
+        rootElement.append(divElement)
+    </script>
+</body>
