--- a/src/exercise/04.extra-01.html
+++ b/src/exercise/04.extra-01.html
@@ -3,9 +3,17 @@
   <script src="https://unpkg.com/react@18.1.0/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@18.1.0/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
-
   <script type="text/babel">
-    const element = <div class='container'> Hello World </div>
+    function message({children}) {
+      return <div className="message"> {children} </div>
+    }
+
+    const element = (
+      <div className="container">
+        {React.createElement(message, {children: 'Hello World'})}
+        {React.createElement(message, {children: 'Goodbye Worlds'})}
+      </div>
+    )
 
     ReactDOM.createRoot(document.getElementById('root')).render(element)
   </script>
